--- a/.github/workflows/master-update.yml
+++ b/.github/workflows/master-update.yml
@@ -1,78 +1,65 @@
-name: Check Branch Sync and Conditional Auto-Merge
+name: Auto Merge Main to Backend & Frontend
 
 on:
   push:
     branches:
-      - main  # Runs every time main is updated
+      - main
 
 jobs:
-  check-sync:
+  merge-branches:
+    name: Merge Main into Backend & Frontend
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Fetch full history for comparisons
+          fetch-depth: 0  # Ensure full history for merge
 
-      - name: Check if master-backend is behind main
-        id: backend_check
+      - name: Set up Git
         run: |
-          if git merge-base --is-ancestor main origin/master-backend; then
-            echo "backend_up_to_date=true" >> $GITHUB_ENV
-          else
-            echo "backend_up_to_date=false" >> $GITHUB_ENV
-          fi
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Check if master-frontend is behind main
-        id: frontend_check
-        run: |
-          if git merge-base --is-ancestor main origin/master-frontend; then
-            echo "frontend_up_to_date=true" >> $GITHUB_ENV
-          else
-            echo "frontend_up_to_date=false" >> $GITHUB_ENV
-          fi
-
-  update-branches:
-    needs: check-sync
-    runs-on: ubuntu-latest
-    env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}  # Automatically available in Actions
-
-      - name: Configure Git
-        run: |
-          git config --global user.email "github-actions@github.com"
-          git config --global user.name "GitHub Actions"
-
-      - name: Merge main into master-backend (if needed)
-        if: env.backend_up_to_date == 'false'
+      - name: Merge Main into master-backend
+        id: merge_backend
         run: |
           git checkout master-backend
-          git merge main --no-edit || echo "CONFLICT=true" >> $GITHUB_ENV
-          if [[ "$CONFLICT" != "true" ]]; then
-            git push origin master-backend
-          else
-            gh pr create --base master-backend --head main --title "Sync main -> master-backend" --body "Conflicts detected – manual merge required."
-          fi
+          git merge --no-ff main || echo "conflict" >> $GITHUB_ENV
 
-      - name: Merge main into master-frontend (if needed)
-        if: env.frontend_up_to_date == 'false'
+      - name: Push Merge to master-backend
+        if: success() && env.conflict != 'conflict'
+        run: git push origin master-backend
+
+      - name: Create PR for master-backend if conflicts exist
+        if: env.conflict == 'conflict'
+        uses: peter-evans/create-pull-request@v6
+        with:
+          branch: master-backend
+          base: main
+          title: "Resolve conflicts: Merge main into master-backend"
+          body: "Conflicts detected. Resolve and merge manually."
+          labels: "auto-merge"
+
+      - name: Merge Main into master-frontend
+        id: merge_frontend
         run: |
           git checkout master-frontend
-          git merge main --no-edit || echo "CONFLICT=true" >> $GITHUB_ENV
-          if [[ "$CONFLICT" != "true" ]]; then
-            git push origin master-frontend
-          else
-            gh pr create --base master-frontend --head main --title "Sync main -> master-frontend" --body "Conflicts detected – manual merge required."
-          fi
+          git merge --no-ff main || echo "conflict" >> $GITHUB_ENV
 
-      - name: Enable Auto-Merge (if no conflicts)
-        if: env.CONFLICT != 'true'
-        run: |
-          for pr in $(gh pr list --state open --json number --jq '.[].number'); do
-            gh pr merge $pr --auto --squash
-          done
+      - name: Push Merge to master-frontend
+        if: success() && env.conflict != 'conflict'
+        run: git push origin master-frontend
+
+      - name: Create PR for master-frontend if conflicts exist
+        if: env.conflict == 'conflict'
+        uses: peter-evans/create-pull-request@v6
+        with:
+          branch: master-frontend
+          base: main
+          title: "Resolve conflicts: Merge main into master-frontend"
+          body: "Conflicts detected. Resolve and merge manually."
+          labels: "auto-merge"
