--- a/.github/workflows/master-update.yml
+++ b/.github/workflows/master-update.yml
@@ -24,42 +24,46 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Merge Main into master-backend
+      - name: Merge Main into master-backend (Fast-Forward Only)
         id: merge_backend
         run: |
           git checkout master-backend
-          git merge --no-ff main || echo "conflict" >> $GITHUB_ENV
+          if ! git merge --ff-only main; then
+            echo "conflict=true" >> $GITHUB_ENV
+          fi
 
-      - name: Push Merge to master-backend
-        if: success() && env.conflict != 'conflict'
+      - name: Push Fast-Forward Merge to master-backend
+        if: env.conflict != 'true'
         run: git push origin master-backend
 
       - name: Create PR for master-backend if conflicts exist
-        if: env.conflict == 'conflict'
+        if: env.conflict == 'true'
         uses: peter-evans/create-pull-request@v6
         with:
-          branch: master-backend
-          base: main
+          base: master-backend
+          head: main
           title: "Resolve conflicts: Merge main into master-backend"
-          body: "Conflicts detected. Resolve and merge manually."
+          body: "Conflicts detected. Resolve manually."
           labels: "auto-merge"
 
-      - name: Merge Main into master-frontend
+      - name: Merge Main into master-frontend (Fast-Forward Only)
         id: merge_frontend
         run: |
           git checkout master-frontend
-          git merge --no-ff main || echo "conflict" >> $GITHUB_ENV
+          if ! git merge --ff-only main; then
+            echo "conflict=true" >> $GITHUB_ENV
+          fi
 
-      - name: Push Merge to master-frontend
-        if: success() && env.conflict != 'conflict'
+      - name: Push Fast-Forward Merge to master-frontend
+        if: env.conflict != 'true'
         run: git push origin master-frontend
 
       - name: Create PR for master-frontend if conflicts exist
-        if: env.conflict == 'conflict'
+        if: env.conflict == 'true'
         uses: peter-evans/create-pull-request@v6
         with:
-          branch: master-frontend
-          base: main
+          base: master-frontend
+          head: main
           title: "Resolve conflicts: Merge main into master-frontend"
-          body: "Conflicts detected. Resolve and merge manually."
+          body: "Conflicts detected. Resolve manually."
           labels: "auto-merge"
