--- a/.github/workflows/master-update.yml
+++ b/.github/workflows/master-update.yml
@@ -1,4 +1,4 @@
-name: Auto Rebase Main to Backend & Frontend
+name: Auto Merge Main to Backend & Frontend
 
 on:
   push:
@@ -6,8 +6,8 @@ on:
       - main
 
 jobs:
-  rebase-branches:
-    name: Rebase Main into Backend & Frontend
+  merge-branches:
+    name: Merge Main into Backend & Frontend
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -17,55 +17,49 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Ensure full history for rebase
+          fetch-depth: 0  # Ensure full history for merge
 
       - name: Set up Git
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Rebase master-backend onto main
-        id: rebase_backend
+      - name: Merge Main into master-backend
+        id: merge_backend
         run: |
           git checkout master-backend
-          git pull origin master-backend
-          if git rebase main; then
-            git push --force-with-lease origin master-backend
-            echo "backend_conflict=false" >> $GITHUB_ENV
-          else
-            git rebase --abort
-            echo "backend_conflict=true" >> $GITHUB_ENV
-          fi
+          git merge --no-ff main || echo "conflict" >> $GITHUB_ENV
+
+      - name: Push Merge to master-backend
+        if: success() && env.conflict != 'conflict'
+        run: git push origin master-backend
 
       - name: Create PR for master-backend if conflicts exist
-        if: env.backend_conflict == 'true'
+        if: env.conflict == 'conflict'
         uses: peter-evans/create-pull-request@v6
         with:
-          base: master-backend
-          head: main
-          title: "Resolve conflicts: Rebase main onto master-backend"
-          body: "Conflicts detected during rebase. Resolve manually."
-          labels: "auto-rebase"
+          branch: master-backend
+          base: main
+          title: "Resolve conflicts: Merge main into master-backend"
+          body: "Conflicts detected. Resolve and merge manually."
+          labels: "auto-merge"
 
-      - name: Rebase master-frontend onto main
-        id: rebase_frontend
+      - name: Merge Main into master-frontend
+        id: merge_frontend
         run: |
           git checkout master-frontend
-          git pull origin master-frontend
-          if git rebase main; then
-            git push --force-with-lease origin master-frontend
-            echo "frontend_conflict=false" >> $GITHUB_ENV
-          else
-            git rebase --abort
-            echo "frontend_conflict=true" >> $GITHUB_ENV
-          fi
+          git merge --no-ff main || echo "conflict" >> $GITHUB_ENV
+
+      - name: Push Merge to master-frontend
+        if: success() && env.conflict != 'conflict'
+        run: git push origin master-frontend
 
       - name: Create PR for master-frontend if conflicts exist
-        if: env.frontend_conflict == 'true'
+        if: env.conflict == 'conflict'
         uses: peter-evans/create-pull-request@v6
         with:
-          base: master-frontend
-          head: main
-          title: "Resolve conflicts: Rebase main onto master-frontend"
-          body: "Conflicts detected during rebase. Resolve manually."
-          labels: "auto-rebase"
+          branch: master-frontend
+          base: main
+          title: "Resolve conflicts: Merge main into master-frontend"
+          body: "Conflicts detected. Resolve and merge manually."
+          labels: "auto-merge"
