--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "iron-session": "^8.0.4",
     "lucide-react": "^0.479.0",
     "next": "^15.2.4",
     "react": "^19.0.0",
